<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".tampilan_hasil">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/taskTxt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/taskTxt"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:paddingLeft="40dp" />

        <TextView
            android:id="@+id/hlTask"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="40dp"
            android:paddingLeft="80dp"
            android:text="@string/idTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView18"
            android:layout_width="250dp"
            android:paddingStart="40dp"
            android:paddingLeft="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/jenisTxt"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hlTask" />

        <TextView
            android:id="@+id/hlJenis"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="40dp"
            android:paddingLeft="80dp"
            android:text="@string/idJenis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView20"
            android:layout_width="250dp"
            android:paddingLeft="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/timeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.179"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hlJenis"
            tools:textSize="18sp" />

        <TextView
            android:id="@+id/hlTime"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingLeft="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/idTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />
    </LinearLayout>

</LinearLayout>